{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 33,
  "lineage": "1cab7e2b-41e4-73eb-cef6-cd92f35f55fd",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:security-group/sg-079d9c724f84a6de2",
            "description": "Cluster security group for EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079d9c724f84a6de2",
            "ingress": [],
            "name": "my-eks-app-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "063212612232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-app-eks-cluster-sg",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-eks-cluster-sg",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068782afb74f1ac91",
            "arn": "arn:aws:ec2:eu-west-1:063212612232:elastic-ip/eipalloc-068782afb74f1ac91",
            "domain": "vpc",
            "id": "eipalloc-068782afb74f1ac91",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-254-220-115.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.220.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-app-nat-eip-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-eip-0",
              "Project": "my-eks-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6ec12991181bb67",
            "arn": "arn:aws:ec2:eu-west-1:063212612232:elastic-ip/eipalloc-0f6ec12991181bb67",
            "domain": "vpc",
            "id": "eipalloc-0f6ec12991181bb67",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-78-169-89.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.169.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-app-nat-eip-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-eip-1",
              "Project": "my-eks-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:internet-gateway/igw-0795cf6efb6f245a2",
            "id": "igw-0795cf6efb6f245a2",
            "owner_id": "063212612232",
            "tags": {
              "Name": "my-eks-app-igw",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-igw",
              "Project": "my-eks-app"
            },
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068782afb74f1ac91",
            "association_id": "eipassoc-00827f138e5286f98",
            "connectivity_type": "public",
            "id": "nat-0fe78785fe32a7b62",
            "network_interface_id": "eni-019f0a26c3b2558ff",
            "private_ip": "10.0.1.31",
            "public_ip": "34.254.220.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-014f585447169604e",
            "tags": {
              "Name": "my-eks-app-nat-gateway-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-gateway-0",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6ec12991181bb67",
            "association_id": "eipassoc-036f1da728e93db0b",
            "connectivity_type": "public",
            "id": "nat-0dba410db75bfdc4f",
            "network_interface_id": "eni-065d01ef58b737d8e",
            "private_ip": "10.0.2.72",
            "public_ip": "54.78.169.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f48154d174c7c683",
            "tags": {
              "Name": "my-eks-app-nat-gateway-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-nat-gateway-1",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-0aa9bf7c3f82f1dd9",
            "id": "rtb-0aa9bf7c3f82f1dd9",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe78785fe32a7b62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-private-rt-0",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-private-rt-0",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-0641db528c3bb976c",
            "id": "rtb-0641db528c3bb976c",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dba410db75bfdc4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-private-rt-1",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-private-rt-1",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:route-table/rtb-076369b6591a5f991",
            "id": "rtb-076369b6591a5f991",
            "owner_id": "063212612232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0795cf6efb6f245a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-app-public-rt",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-public-rt",
              "Project": "my-eks-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcc76031ae44103a",
            "route_table_id": "rtb-0aa9bf7c3f82f1dd9",
            "subnet_id": "subnet-05ae4b2e36415c70a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c6a4765ebee0731",
            "route_table_id": "rtb-0641db528c3bb976c",
            "subnet_id": "subnet-0d2eb60fba897ccd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f09c1c6e61cc6c48",
            "route_table_id": "rtb-076369b6591a5f991",
            "subnet_id": "subnet-014f585447169604e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cab10068f4a31a4",
            "route_table_id": "rtb-076369b6591a5f991",
            "subnet_id": "subnet-0f48154d174c7c683"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-05ae4b2e36415c70a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ae4b2e36415c70a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-private-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-private-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-0d2eb60fba897ccd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2eb60fba897ccd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-private-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-private-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-014f585447169604e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014f585447169604e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-public-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-public-subnet-0",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:subnet/subnet-0f48154d174c7c683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f48154d174c7c683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063212612232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-app-public-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-app-public-subnet-1",
              "Project": "my-eks-app",
              "kubernetes.io/cluster/my-eks-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-031759aeb77a2f004"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:063212612232:vpc/vpc-031759aeb77a2f004",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e9c6a81cb8226ed",
            "default_route_table_id": "rtb-0ebaeaa0e7e746b84",
            "default_security_group_id": "sg-0a4e51695905e65d6",
            "dhcp_options_id": "dopt-00470147488639e64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031759aeb77a2f004",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ebaeaa0e7e746b84",
            "owner_id": "063212612232",
            "tags": {
              "Name": "my-eks-app-vpc",
              "Project": "my-eks-app"
            },
            "tags_all": {
              "Name": "my-eks-app-vpc",
              "Project": "my-eks-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}